tests/compile_fail/wrong_join_table.stderr
error[E0271]: type mismatch resolving `<AuthorId as ForeignKey<Posts>>::References == Comments`
  --> tests/compile_fail/wrong_join_table.rs:23:10
   |
23 |         .join::<Comments, posts::AuthorId>();
   |          ^^^^ type mismatch resolving `<AuthorId as ForeignKey<Posts>>::References == Comments`
   |
note: expected this to be `Comments`
  --> tests/compile_fail/wrong_join_table.rs:8:1
   |
 8 | / table! {
 9 | |     posts: Posts => "posts" {
10 | |         PostId*:   i64,
11 | |         AuthorId-> Users: i64
12 | |     }
13 | | }
   | |_^
note: required by a bound in `QueryBuilder::<WithColumns<T>>::join`
  --> src/lib.rs
   |
   |     pub fn join<B, FK>(mut self) -> Self
   |            ---- required by a bound in this associated function
...
   |         FK: ForeignKey<T, References = B>,
   |                           ^^^^^^^^^^^^^^ required by this bound in `QueryBuilder::<WithColumns<T>>::join`
   = note: this error originates in the macro `$crate::table` which comes from the expansion of the macro `table` (in Nightly builds, run with -Z macro-backtrace for more info)
